[tool.poetry]
name = "sandbox"
version = "0.1.0"
description = ""
authors = ["Vlad Dmitrievich <me@2tunnels.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.61.2"
uvicorn = "^0.12.2"
Faker = "^4.16.0"
pydantic = {extras = ["email"], version = "^1.7.2"}

[tool.poetry.dev-dependencies]
isort = "^5.6.4"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
