[tool.poetry]
name = "sandbox"
version = "0.1.0"
description = ""
authors = ["Vlad Dmitrievich <me@2tunnels.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.2"
uvicorn = {extras = ["standard"], version = "^0.12.2"}
faker = "^4.16.0"
pydantic = {extras = ["email"], version = "^1.7.2"}
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
isort = "^5.6.4"
black = "^20.8b1"
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
requests = "^2.25.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
